<resources>
    <string name="app_name">DigiBrain</string>

    <!--    Authentication pages-->
    <string name="username">Username</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_button">SIGN UP</string>

    <!--    Main page-->
    <string name="learn">Learn</string>
    <string name="quiz">Quiz</string>
    <string name="profile">Profile</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>

    <!--    Learn page-->
    <string name="search">Search</string>
    <string name="start">Start</string>
    <string name="choose_subject">Choose subject ...</string>
    <string name="subject">Subject</string>
    <string name="choose_domain">Choose domain ...</string>
    <string name="domain">Domain</string>
    <string name="choose_class">Choose class ...</string>
    <string name="class_">Class</string>
    <string name="school">School</string>
    <string name="highschool">Highschool</string>
    <string name="university">University</string>
    <string name="choose_what_you_want_to_learn">Choose what you want to learn</string>
    <string name="select_class_number">Select a class number</string>
    <string name="select_domain">Select a domain</string>
    <string name="select_subject">Select a subject</string>
    <string name="select">Select</string>
    <string name="no_domains_defined_for_this_class">No domains defined for this class</string>
    <string name="no_subjects_defined_for_this_class">No subjects defined for this class</string>
    <string name="title_activity_subject">SubjectActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_content">No content</string>
    <string name="take_a_quiz">Take a quiz</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="choose_quiz_type">Choose quiz type ...</string>
    <string name="type">Type</string>
    <string name="select_type">Select a type</string>
    <string name="score">Score:</string>
    <string name="time">Time:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check">Check</string>
    <string name="ok">Ok</string>
    <string name="total_time">Total time:</string>
    <string name="number_of_questions">Nr. of questions:</string>
    <string name="congratulations">Congratulations</string>
    <string name="failure">Failure</string>
    <string name="close">Close</string>
    <string name="timeout">Timeout</string>
    <string name="add">Add</string>
    <string name="chapter_name">Chapter name</string>
    <string name="lesson_title">Lesson title</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_chapter">Choose chapter ...</string>
    <string name="choose_lessons">Choose lessons ...</string>
    <string name="save">Save</string>
    <string name="choose_language">Choose language</string>

    <!--    Settings-->
    <string name="dark_mode">Dark mode</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="add_question">Add question</string>
    <string name="question">Question</string>
    <string name="answer_1">Answer 1</string>
    <string name="correct">Correct</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="position">Position</string>
    <string name="select_what_lessons_are_relevant_for_this_question">Select what lessons are relevant for this question</string>
    <string name="falseWord">False</string>
    <string name="trueWord">True</string>
    <string name="quiz_report">Quiz report</string>
    <string name="no_data">No data</string>
    <string name="legend">Legend</string>
    <string name="wrong">Wrong</string>
    <string name="quiz_type_report">Quiz Type report</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="total_number">Total number</string>
    <string name="true_or_false">True or False</string>
    <string name="words_gap">Words Gap</string>
    <string name="add_subject">Add\nsubject</string>
    <string name="subject_title">Subject title</string>
    <string name="choose_icon">Choose icon</string>
    <string name="role">Role</string>
    <string name="account_info">Account info</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="hi">Hi</string>
    <string name="all">All</string>
    <string name="learn_path">Learn Path</string>

    <!--    Services-->
    <string name="user_not_active_title">It\'s time to learn</string>
    <string name="user_not_active_short_message">No activity in past 3 days</string>
    <string name="user_not_active_message">No activity in past 3 days. Read some learning materials or start a learning path</string>
    <string name="pending_request">Pending request</string>
    <string name="request_admin_role">Request admin role</string>
    <string name="request_teacher_role">Request teacher role</string>
    <string name="check_your_profile">Check your profile</string>
    <string name="explore">Explore</string>
    <string name="learning">learning</string>
    <string name="paths">paths</string>
    <string name="choose_none_nsubject">Choose\none\nsubject</string>
    <string name="take_na_nquiz">Take\na\nquiz</string>
    <string name="learning_paths">Learning paths</string>
    <string name="subjects_">Subjects:</string>
    <string name="name_">Name:</string>
    <string name="filter">Filter</string>
    <string name="after_class">After class</string>
    <string name="after_subject">After subject</string>
    <string name="after_name">After name</string>
    <string name="learn_path_name">Learn Path name</string>
    <string name="started">Started</string>
    <string name="done">Done</string>
    <string name="author">Author</string>
    <string name="updated">Updated</string>
    <string name="views">Views:</string>
    <string name="sections">Sections</string>
    <string name="graph">Graph</string>
    <string name="description">Description</string>
    <string name="lesson">Lesson</string>
    <string name="of">of</string>
    <string name="start_again">Start again</string>
    <string name="blocked">Blocked</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="passord_does_not_match">Passwords doesn\'t match</string>
    <string name="learn_path_started">Learn Path started</string>
    <string name="Learn_path_finished">Learn Path finished</string>
</resources>