<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_card"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/curve_shape"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/congratulations"
            android:textSize="@dimen/_25sdp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/questions_number_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/status_message"
            android:weightSum="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question_number_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/number_of_questions"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <TextView
                android:id="@+id/questions_number"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/total_time_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/questions_number_holder"
            android:weightSum="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_time_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/total_time"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <TextView
                android:id="@+id/total_time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/score_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/total_time_holder"
            android:weightSum="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/score_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <TextView
                android:id="@+id/score"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/quiz_status_logo"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_holder" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/close_button"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/curve_shape"
            android:backgroundTint="@color/yellow"
            android:text="@string/close"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/score_holder"
            app:layout_constraintWidth_percent="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>