<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_18sdp"
        android:text="Hi, Alex"
        android:textStyle="bold"
        android:layout_margin="@dimen/_20sdp"
        android:textColor="@color/black_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logout"
        android:layout_margin="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/learningPathButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/curve_shape"
        android:backgroundTint="@color/blue_light_dark"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        tools:layout_editor_absoluteX="13dp">

        <TextView
            android:id="@+id/learn_path_title_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintBottom_toTopOf="@+id/learn_path_title_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/learn_path_title_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/learning"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintBottom_toTopOf="@+id/learn_path_title_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/learn_path_title_1"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/learn_path_title_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_20sdp"
            android:text="@string/paths"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/learn_path_title_2"
            app:layout_constraintWidth_percent="0.5" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/_120sdp"
            android:src="@drawable/kids_learning"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/learn_path_title_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/learnButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/curve_shape"
        android:backgroundTint="@color/yellow"
        android:padding="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/learningPathButton"
        app:layout_constraintWidth_percent="0.45">

        <TextView
            android:id="@+id/learnText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/learn"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/kid_learn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/learnText"
            app:layout_constraintWidth_percent="0.6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quizButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/curve_shape"
        android:backgroundTint="@color/green"
        android:padding="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/learningPathButton"
        app:layout_constraintWidth_percent="0.45">

        <TextView
            android:id="@+id/quizText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quiz"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/kid_test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quizText"
            app:layout_constraintWidth_percent="0.6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/profile_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_18sdp"
        android:text="@string/check_your_profile"
        android:textStyle="bold"
        android:layout_margin="@dimen/_20sdp"
        android:textColor="@color/black_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/learnButton" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/profile_category"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profileButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/curve_shape"
            android:backgroundTint="@color/gray_light_dark"
            android:padding="@dimen/_10sdp"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="13dp">

            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.1"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.9"
                android:src="@drawable/ic_profile"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/profileText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile_icon"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/statsButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/curve_shape"
            android:backgroundTint="@color/gray_light_dark"
            android:padding="@dimen/_10sdp"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintTop_toBottomOf="@id/profileButton"
            tools:layout_editor_absoluteX="13dp">

            <ImageView
                android:id="@+id/statistics_icon"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.1"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.9"
                android:src="@drawable/ic_stats"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/statsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/statistics"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/statistics_icon"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/curve_shape"
            android:backgroundTint="@color/gray_light_dark"
            android:padding="@dimen/_10sdp"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintTop_toBottomOf="@id/statsButton"
            tools:layout_editor_absoluteX="13dp">

            <ImageView
                android:id="@+id/settings_icon"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.1"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.9"
                android:src="@drawable/ic_settings"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/settingsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/settings_icon"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>